# 236_project3

./: CMakeLists.txt  DatalogProgram.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.h  Rule.h  Token.cpp  Token.h  lab3  main.cpp  makefile
Automaton/: AddAutomaton.h  Automaton.h  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  CommentBlockAutomaton.cpp  CommentBlockAutomaton.h  FactsAutomaton.h  IdAutomaton.cpp  IdAutomaton.h  LeftPerenAutomaton.cpp  LeftPerenAutomaton.h  MultiplyAutomaton.h  PeriodAutomaton.h  QMarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  RightPerenAutomaton.cpp  RightPerenAutomaton.h  RulesAutomoton.cpp  RulesAutomoton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h
Database/: Database.h  Header.h  Relation.h  Tuple.h
Parser/: DatalogProgram.h  Parser.cpp  Parser.h  Predicate.h
lab3.dSYM/Contents/Resources/DWARF/: lab3
